change in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Varun Boppudi Demo
+    Varun Boppudi Demo another
 </body>
 </html>
